--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
     <string name="open">Open Navigation Drawer</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="email_address">Email Address</string>
+    <string name="graduation_year">Graduation Year</string>
+    <string name="year">Year</string>
+    <string name="course">Course</string>
+    <string name="helper_text">Required*</string>
+    <string name="password">Password</string>
+    <string name="registration_number">Registration Number</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="name">Name</string>
 </resources>
