--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="registration_number">Registration Number</string>
     <string name="phone_number">Phone Number</string>
     <string name="name">Name</string>
+    <string name="already_a_user_click_here">Already a User? Click here!</string>
+    <string name="sign_in">Sign In</string>
+    <string name="not_yet_registered_click_here">Not yet Registered? Click Here!</string>
 </resources>
