Implement subscribing and unsubscribing to clubs
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="not_yet_registered_click_here">Not yet Registered? Click Here!</string>
     <string name="mnnit_clubs">MNNIT Clubs</string>
     <string name="subscribe">Subscribe</string>
+    <string name="unsubscribe">Unsubscribe</string>
 </resources>
